--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:produtoSTS;DB_CLOSE_ON_EXIT=FALSE
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
+spring.jackson.deserialization.fail-on-unknown-properties=true
